2006-05-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* gdipFunctions.c: Fix misnamed GdipAdd*Path*String[I] API (#78383)

2006-05-11  Peter Dennis Bartok  <pbartok@novell.com>

	* Icon.cs: Don't require width/height to be non-0 when creating from
	  serialized data, just require them to be square

2006-05-04  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* Graphics.cs: Chaned DrawIcon methods to dispose the temporary bitmap
	on it's drawn.

2006-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Graphics.cs: Added a MonoTODO to PixelOffsetMode property so it shows
	(in the class status library) a note that this isn't supported with 
	libgdiplus.

2006-05-02  Peter Dennis Bartok  <pbartok@novell.com>

	* FontConverter.cs (ConvertFrom): Implemented it properly. Fixes #78269

2006-05-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* PointF.cs: Add operators + and - between PointF and SizeF in the
	2.0 profile (CSC 8.x can compile that, but sadly it doesn't show in as
	missing in corcompare results).

2006-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* gdipFunctions.cs: Fixed wrappers for Gdip[Begin|End]Container[2][I]
	* Graphics.cs: Fixed usage of fixed API ;-) Added MonoTODO on 
	BeginContainer methods that use rectangles and on TextContrast property 
	(all aren't currently supported in libgdiplus).

2006-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Graphics.cs: Removed MonoTODO on DrawCurve methods (it's fixed in 
	libgdiplus). Fixed minor extra/missing for corcompare.

2006-05-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SizeF.cs: serialization compatibility fixes. Closes bug #78236.

2006-04-30  Peter Dennis Bartok  <pbartok@novell.com>

	* Icon.cs: Icon AND masks are organized in strides, fixed to calculate
	  and set proper transparency. Also fixed broken calculation of AND
	  size when reading the icon. NDocGui now shows pretty buttons.

2006-04-28  Sebastien Pouliot  <sebastien@ximian.com> 
